Break into junit tests and nonjunit tests.

--- a/build.gradle
+++ b/build.gradle
@@ -716,9 +716,9 @@ subprojects {
             ]
         }
 
-        // Create an allNonCheckerJunitTests task per project
-        tasks.create(name: 'allNonCheckerJunitTests', type: GradleBuild, group: 'Verification') {
-            description 'Run all Checker Framework tests except for checker Junit tests.'
+        // Create an nonJunitTests task per project
+        tasks.create(name: 'nonJunitTests', type: GradleBuild, group: 'Verification') {
+            description 'Run all Checker Framework tests except for the Junit tests.'
             tasks = ['checkPurity']
             if (project.name.is('framework') || project.name.is('checker')) {
                 tasks += ['checkCompilerMessages', 'jtregTests']
@@ -729,18 +729,13 @@ subprojects {
 
             if (project.name.is('checker')) {
                 tasks += ['nullnessExtraTests', 'commandLineTests', 'tutorialTests']
-            } else {
-                tasks += ['test']
             }
         }
 
         // Create an allTests task per project
         tasks.create(name: 'allTests', type: GradleBuild, group: 'Verification') {
             description 'Run all Checker Framework tests'
-            tasks = ['allNonCheckerJunitTests']
-            if (project.name.is('checker')) {
-                tasks += ['test']
-            }
+            tasks = ['nonJunitTests', 'test']
         }
 
         task javadocPrivate(dependsOn: javadoc) {
