--- a/build.gradle
+++ b/build.gradle
@@ -716,10 +716,10 @@ subprojects {
             ]
         }
 
-        // Create an allTests task per project
-        tasks.create(name: 'allTests', type: GradleBuild, group: 'Verification') {
-            description 'Run all Checker Framework tests'
-            tasks = ['test', 'checkPurity']
+        // Create a nonJunitTests task per project
+        tasks.create(name: 'nonJunitTests', type: GradleBuild, group: 'Verification') {
+            description 'Run all Checker Framework tests except for the Junit tests.'
+            tasks = ['checkPurity']
             if (project.name.is('framework') || project.name.is('checker')) {
                 tasks += ['checkCompilerMessages', 'jtregTests']
             }
@@ -730,6 +730,13 @@ subprojects {
             if (project.name.is('checker')) {
                 tasks += ['nullnessExtraTests', 'commandLineTests', 'tutorialTests']
             }
+        }
+
+        // Create an allTests task per project
+        tasks.create(name: 'allTests', type: GradleBuild, group: 'Verification') {
+            description 'Run all Checker Framework tests'
+	    // The 'test' target is just the JUnit tests.
+            tasks = ['nonJunitTests', 'test']
         }
 
         task javadocPrivate(dependsOn: javadoc) {
