--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -335,6 +335,7 @@ task jtregJdk11Tests(dependsOn: ':downloadJtreg', group: 'Verification') {
     String name = 'all'
     doLast {
         if(isJava8) {
+            println "This test is only run with JDK 11."
             return;
         }
         exec {
