--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,8 @@ jobs:
   steps:
   - checkout: self
     fetchDepth: 25
+  - bash: env
+    displayName: env
   - bash: ./checker/bin-devel/test-misc.sh
     displayName: test-misc.sh
 - job: misc_jdk11
