--- a/docs/examples/MavenExample/pom.xml
+++ b/docs/examples/MavenExample/pom.xml
@@ -83,10 +83,10 @@
                   <version>${checkerFrameworkVersion}</version>
                 </path>
                 <!--
-                    If custom subtypes or fenums are to be used, they need to be packaged into a separate module so that
-                    they could be compiled beforehand. See https://checkerframework.org/manual/#subtyping-compiling
-                    Note, once <annotationProcessorPaths> is defined, it becomes the only source for classpath lookup.
-                    See https://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html#annotationProcessorPaths
+                    Any custom type qualifiers must be in a separate pre-compiled module;
+                    see https://checkerframework.org/manual/#subtyping-compiling .
+                    Once <annotationProcessorPaths> is defined, it is the only source for
+                    classpath lookup; see https://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html#annotationProcessorPaths .
                 -->
                 <!-- <path> -->
                 <!--   <groupId>your.qual.group</groupId> -->
