Break long line

--- a/docs/examples/MavenExample/pom.xml
+++ b/docs/examples/MavenExample/pom.xml
@@ -86,7 +86,8 @@
                     Any custom type qualifiers must be in a separate pre-compiled module;
                     see https://checkerframework.org/manual/#subtyping-compiling .
                     Once <annotationProcessorPaths> is defined, it is the only source for
-                    classpath lookup; see https://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html#annotationProcessorPaths .
+                    classpath lookup; see
+                    https://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html#annotationProcessorPaths .
                 -->
                 <!-- <path> -->
                 <!--   <groupId>your.qual.group</groupId> -->
