--- a/build.gradle
+++ b/build.gradle
@@ -337,14 +337,15 @@ dependencies {
  * Creates a task named taskName that runs javadoc.
  *
  * @param taskName the name of the task to create
+ * @param taskDescription description of the task
  * @param memberLevel the JavadocMemberLevel to use
  * @param requireJavadoc whether or not to run the RequireJavadoc doclet. If false -Xdoclint:all is
  * passed. Defaults to true.
  * @return the new task
  */
-def createJavadocTask(taskName, memberLevel, requireJavadoc = true) {
+def createJavadocTask(taskName, taskDescription, memberLevel, requireJavadoc = true) {
     tasks.create(name: taskName, type: Javadoc) {
-        description = 'Ensures that Java elements have Javadoc documentation.'
+        description = taskDescription
         destinationDir = file("${rootDir}/docs/tmpapi")
         destinationDir.mkdirs()
         subprojects.forEach {
@@ -369,11 +370,11 @@ def createJavadocTask(taskName, memberLevel, requireJavadoc = true) {
 }
 // With JDK 11 this task produces the following error:
 // javadoc: error - invalid flag: -d
-createJavadocTask('requireJavadoc', JavadocMemberLevel.PROTECTED)
+createJavadocTask('requireJavadoc', 'Ensures that protected and public Java elements have Javadoc documentation.', JavadocMemberLevel.PROTECTED)
 // With JDK 11 this task produces the following error:
 // javadoc: error - invalid flag: -d
-createJavadocTask('requireJavadocPrivate', JavadocMemberLevel.PRIVATE)
-createJavadocTask('javadocDoclintAll', JavadocMemberLevel.PRIVATE, false)
+createJavadocTask('requireJavadocPrivate', 'Ensures that private, protected, and public Java elements have Javadoc documentation.', JavadocMemberLevel.PRIVATE)
+createJavadocTask('javadocDoclintAll', 'Runs javadoc with -Xdoclint:all option.', JavadocMemberLevel.PRIVATE, false)
 
 task downloadJtreg(type: Download) {
     description "Downloads and unpacks jtreg."
