--- a/docs/examples/MavenExample/pom.xml
+++ b/docs/examples/MavenExample/pom.xml
@@ -73,8 +73,11 @@
           <version>3.8.1</version>
           <configuration>
               <fork>true</fork>
+              <!-- If using JDK 8, add source and target. -->
               <source>1.8</source>
               <target>1.8</target>
+              <!-- If using JDK 11, remove source and target and uncomment "release" below. -->
+              <!-- <release>11</release> -->
               <showWarnings>true</showWarnings>
               <annotationProcessorPaths>
                 <path>
@@ -103,7 +106,7 @@
               <compilerArgs>
                   <!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
                   <arg>-J-Xbootclasspath/p:${errorProneJavac}</arg>
-                  <!-- location of the annotated JDK, which comes from a Maven dependency -->
+                  <!-- location of the annotated JDK 8, which comes from a Maven dependency -->
                   <arg>-Xbootclasspath/p:${annotatedJdk}</arg>
                   <!-- -Awarns treats Checker Framework errors as warnings -->
                   <!-- <arg>-Awarns</arg> -->
@@ -112,6 +115,10 @@
                     <arg>-Aquals=myPackage.qual.MyFenum,myPackage.qual.MyCustomType</arg>
                   -->
                   <arg>-Alint</arg>
+		<!-- If using JDK 11 remove the two arguments above and uncomment the one below. -->
+		<!-- <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg> -->
+		<!-- -Awarns turns type-checking errors into warnings. -->
+		<!-- <arg>-Awarns</arg> -->
               </compilerArgs>
           </configuration>
       </plugin>
