--- a/build.gradle
+++ b/build.gradle
@@ -763,29 +763,29 @@ subprojects {
         }
 
         // Create a nonJunitTests task per project
-        tasks.create(name: 'nonJunitTests', type: GradleBuild, group: 'Verification') {
+        tasks.create(name: 'nonJunitTests', group: 'Verification') {
             description 'Run all Checker Framework tests except for the Junit tests.'
-            tasks = ['checkPurity', 'checkInterning', 'checkWorkingNullness']
+            dependsOn('checkPurity', 'checkInterning', 'checkWorkingNullness')
             if (project.name.is('framework') || project.name.is('checker')) {
-                tasks += ['checkCompilerMessages', 'jtregTests']
+                dependsOn('checkCompilerMessages', 'jtregTests')
             }
             if (project.name.is('framework')) {
-                tasks += ['wholeProgramInferenceTests', 'loaderTests']
+                dependsOn('wholeProgramInferenceTests', 'loaderTests')
             }
 
             if (project.name.is('checker')) {
                 if (!isJava8) {
-                    tasks += ['jtregJdk11Tests']
+                    dependsOn('jtregJdk11Tests')
                 }
-                tasks += ['nullnessExtraTests', 'commandLineTests', 'tutorialTests']
+                dependsOn('nullnessExtraTests', 'commandLineTests', 'tutorialTests')
             }
         }
 
         // Create an allTests task per project
-        tasks.create(name: 'allTests', type: GradleBuild, group: 'Verification') {
+        tasks.create(name: 'allTests', group: 'Verification') {
             description 'Run all Checker Framework tests'
-	    // The 'test' target is just the JUnit tests.
-            tasks = ['nonJunitTests', 'test']
+            // The 'test' target is just the JUnit tests.
+            dependsOn('nonJunitTests', 'test')
         }
 
         task javadocPrivate(dependsOn: javadoc) {
@@ -899,20 +899,31 @@ task checkBasicStyle(group: 'Format') {
         }
     }
 }
-
-task releaseBuild(type: GradleBuild) {
-    description 'Build everything required for a release'
-    startParameter = new StartParameter()
-    startParameter.setProjectProperties(release: true)
-    // This downloads rather than builds the jdk8.jar because that's what is used in the CI tests.
-    tasks = ['clean', 'assemble', 'sourcesJar', 'javadocJar', 'allJavadoc', 'framework:allJavadocJar', 'framework:allSourcesJar', 'checker:allJavadocJar', 'checker:allSourcesJar']
+assemble.mustRunAfter(clean)
+task buildAll {
+    description 'Build all jar files, including source and javadoc jars'
+    dependsOn(clean, assemble, allJavadoc)
+    subprojects { Project subproject ->
+        dependsOn("${subproject.name}:javadocJar")
+        dependsOn("${subproject.name}:sourcesJar")
+    }
+    dependsOn('framework:allJavadocJar', 'framework:allSourcesJar', 'checker:allJavadocJar', 'checker:allSourcesJar')
 }
 
-task releaseAndTest(type: GradleBuild, dependsOn: 'releaseBuild') {
+task releaseBuild {
+    description 'Build everything required for a release'
+    doFirst {
+        release = true
+    }
+    finalizedBy(buildAll)
+}
+
+task releaseAndTest {
     description 'Build everything required for a release and run allTests'
-    startParameter = new StartParameter()
-    startParameter.setProjectProperties(release: true)
-    tasks = ['allTests']
+    dependsOn(releaseBuild)
+    subprojects { Project subproject ->
+        dependsOn("${subproject.name}:allTests")
+    }
 }
 
 // Don't create an empty checker-framework-VERSION.jar
