Revert "Use implementation rather than compile."
This reverts commit 32388d4b2cc21baf4634bd1bffe87497c7af4997.

--- a/build.gradle
+++ b/build.gradle
@@ -586,7 +586,7 @@ subprojects {
                 }
             }
             manifest {
-                attributes("Implementation-Version": "${project.version}")
+                attributes("Implementation-Version": "${version}")
                 attributes("Implementation-URL": "https://checkerframework.org")
                 if (! archiveFileName.get().endsWith("source.jar")) {
                     attributes('Automatic-Module-Name': "org.checkerframework." + project.name.replaceAll('-', '.'))
