--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     implementation project(':javacutil')
     implementation files("${stubparserJar}")
     implementation files("${afuJar}")
-    compileOnly project(':checker-qual')
+    implementation project(':checker-qual')
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation project(':framework-test')
