Gradle: use `implementation` rather than `compile` (#2969)

--- a/build.gradle
+++ b/build.gradle
@@ -592,7 +592,7 @@ subprojects {
                 }
             }
             manifest {
-                attributes("Implementation-Version": "${version}")
+                attributes("Implementation-Version": "${project.version}")
                 attributes("Implementation-URL": "https://checkerframework.org")
                 if (! archiveFileName.get().endsWith("source.jar")) {
                     attributes('Automatic-Module-Name': "org.checkerframework." + project.name.replaceAll('-', '.'))
